Added the login functionality

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,21 @@
   }
 }
 
-/* .active {
-  color: #4f46e5;
-  border-bottom: 1px solid #4f46e5;
-} */
+.spinner {
+  width: 20px;
+  padding: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #ccc;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
